--- a/Project_website/src/app/app.scss
+++ b/Project_website/src/app/app.scss
@@ -1,11 +1,13 @@
 .slider, .team{
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+  height: auto;
   box-sizing: border-box;
 }
 
 .about {
   width: 100%;
+  min-height: 100vh;
   height: auto;
   box-sizing: border-box;
 }
